# sursu-oop-thief-trainer

./: README.md
EngineCore/: EngineCore.sln
EngineCore/EngineCoreCpp/: CMakeLists.txt  Engine.cpp  Engine.h  EngineCoreCpp.vcxproj  EngineCoreCpp.vcxproj.filters  build.ps1
EngineCore/EngineCoreCsharp/: EngineCoreCsharp.csproj  EngineException.cs  EngineHelper.cs  EngineSafeHandle.cs  Setting.cs
ThiefHackUI/: ThiefHackUI.sln
ThiefHackUI/ThiefHackUI/: App.xaml  App.xaml.cs  AppDbContext.cs  AppDbContextFactory.cs  DatabaseService.cs  EngineService.cs  Host.cs  IDatabaseService.cs  IEngineService.cs  MainWindow.xaml  MainWindow.xaml.cs  ThiefHackUI.csproj
